<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MediaActivity">

  <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="81dp"
      android:gravity="center"
      android:lineSpacingExtra="8sp"
      android:text="@string/texto_media_final"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="70dp"
      android:layout_height="44dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="552dp"
      android:gravity="center"
      android:text="@string/texto_nota_1"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.061"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/txtNota1"
      android:layout_width="280dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center|center_vertical"
      android:ems="10"
      android:gravity="center_vertical"
      android:hint="Ex: 10"
      android:inputType="number"
      app:layout_constraintBottom_toBottomOf="@+id/textView2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.809"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/textView2"
      app:layout_constraintVertical_bias="0.0"
      tools:ignore="HardcodedText" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="70dp"
      android:layout_height="44dp"
      android:layout_marginTop="28dp"
      android:gravity="center"
      android:text="@string/texto_nota_2"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/textView2"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="@+id/textView2"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
      app:layout_constraintVertical_bias="0.022" />

  <EditText
      android:id="@+id/txtNota2"
      android:layout_width="280dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:ems="10"
      android:hint="Ex: 6"
      android:inputType="number"
      app:layout_constraintBottom_toBottomOf="@+id/textView3"
      app:layout_constraintEnd_toEndOf="@+id/txtNota1"
      app:layout_constraintHorizontal_bias="0.725"
      app:layout_constraintStart_toStartOf="@+id/txtNota1"
      app:layout_constraintTop_toTopOf="@+id/textView3"
      app:layout_constraintVertical_bias="0.0"
      tools:ignore="HardcodedText" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="70dp"
      android:layout_height="44dp"
      android:gravity="center"
      android:text="@string/texto_faltas"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/textView3"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/textView3"
      app:layout_constraintTop_toBottomOf="@+id/textView3"
      app:layout_constraintVertical_bias="0.087" />

  <EditText
      android:id="@+id/txtFaltas"
      android:layout_width="280dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:ems="10"
      android:hint="Ex: 8"
      android:inputType="number"
      app:layout_constraintBottom_toBottomOf="@+id/textView4"
      app:layout_constraintEnd_toEndOf="@+id/txtNota2"
      app:layout_constraintHorizontal_bias="0.725"
      app:layout_constraintStart_toStartOf="@+id/txtNota2"
      app:layout_constraintTop_toTopOf="@+id/textView4"
      app:layout_constraintVertical_bias="0.0"
      tools:ignore="HardcodedText"/>

  <TextView
      android:id="@+id/lbNota"
      android:layout_width="72dp"
      android:layout_height="39dp"
      android:layout_gravity="center"
      android:layout_marginTop="64dp"
      android:text="@string/texto_nota_final"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.106"
      app:layout_constraintStart_toStartOf="@+id/textView4"
      app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <TextView
      android:id="@+id/lbNotaFinal"
      android:layout_width="200dp"
      android:layout_height="39dp"
      android:layout_gravity="center"
      android:text=""
      android:textAlignment="center"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/lbNota"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.276"
      app:layout_constraintStart_toStartOf="@+id/txtFaltas"
      app:layout_constraintTop_toTopOf="@+id/lbNota"
      app:layout_constraintVertical_bias="0.0" />

  <TextView
      android:id="@+id/lbSit"
      android:layout_width="70dp"
      android:layout_height="35dp"
      android:layout_gravity="start"
      android:layout_marginTop="24dp"
      android:text="@string/texto_situacao"
      android:textAlignment="textStart"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="@+id/lbNota"
      app:layout_constraintTop_toBottomOf="@+id/lbNota" />

  <TextView
      android:id="@+id/lbSituacao"
      android:layout_width="200dp"
      android:layout_height="35dp"
      android:layout_gravity="center"
      android:textAlignment="center"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/lbSit"
      app:layout_constraintEnd_toEndOf="@+id/lbNotaFinal"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toEndOf="@+id/lbSit"
      app:layout_constraintTop_toTopOf="@+id/lbSit"
      app:layout_constraintVertical_bias="0.0" />

  <Button
      android:id="@+id/bttCalcular"
      android:layout_width="374dp"
      android:layout_height="54dp"
      android:text="@string/texto_button_calcular"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.513"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.785" />

  <Button
      android:id="@+id/bttLimpar"
      android:layout_width="0dp"
      android:layout_height="54dp"
      android:layout_marginTop="12dp"
      android:text="@string/texto_button_limpar"
      app:layout_constraintEnd_toEndOf="@+id/bttCalcular"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/bttCalcular"
      app:layout_constraintTop_toBottomOf="@+id/bttCalcular" />

  <Button
      android:id="@+id/bttSair"
      android:layout_width="0dp"
      android:layout_height="54dp"
      android:layout_marginBottom="8dp"
      android:text="@string/texto_button_sair"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/bttLimpar"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="@+id/bttLimpar"
      app:layout_constraintTop_toBottomOf="@+id/bttLimpar" />


</androidx.constraintlayout.widget.ConstraintLayout>